fix jumpy heading in faq when opened

--- a/css/style-v1.css
+++ b/css/style-v1.css
@@ -3147,9 +3147,6 @@
     }
   }
   @media (max-width: 467.98px) {
-    #faqs-container .faq.faq-active h3 {
-      width: 74%;
-    }
     #mainhero {
       margin-top: -52.1797px;
     }
